<resources>
    <string name="app_name">Hamilton</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="str_search">Search</string>
    <string name="str_properties">&#160;Properties</string>
    <string name="str_shortlist">Shortlist</string>
    <string name="str_me">Me</string>
    <string name="str_email">email</string>
    <string name="str_password">password</string>
    <string name="str_forgot_password"><![CDATA[<u>forgot password</u>]]></string>
    <string name="str_sign_in_cap">LOGIN</string>
    <string name="str_dont_have_account"><![CDATA[Don\'t have account?<font color=\"#f37521\">signup</Font>]]></string>
    <string name="str_already_have_account"><![CDATA[I have already account.<font color=\"#f37521\">login</Font>]]></string>
    <string name="str_f">f</string>
    <string name="str_t">T</string>
    <string name="str_g">G</string>
    <string name="str_name">name</string>
    <string name="str_phone">phone</string>
    <string name="str_sign_up">SIGN UP</string>
    <string name="error">Error</string>
    <string name="err_username">Please enter a valid username</string>
    <string name="err_password">Please enter a valid password</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="err_password_confirm">Password and Confirm Password are not same</string>
    <string name="str_buy_cap">BUY</string>
    <string name="str_rent_cap">RENT</string>
    <string name="str_hint_search">Search</string>
    <string name="str_our_offers">OUR OFFERS</string>
    <string name="str_account_cap">ACCOUNT</string>
    <string name="str_logout_cap">LOGOUT</string>
    <string name="str_building_info">Building Information</string>
    <string name="str_land_info">Land Information</string>
    <string name="str_building_updates">Building Updates</string>
    <string name="str_customer_care">Customer Care</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_account_setting">Account Settings</string>
    <string name="str_new_password">new Password</string>
    <string name="str_confirm_password">confirm Password</string>
    <string name="str_enter_email_first">Please enter email first</string>
    <string name="str_login_for_detail">You are not Logged in Please Login for more details</string>
    <string name="str_tap_to_login">Tap to Login</string>
    <string name="str_buy">Buy</string>
    <string name="str_rent">Rent</string>
    <string name="str_price_range">Price Range</string>
    <string name="str_any">Any</string>
    <string name="str_property_type">Property Type</string>

    <string name="font_light">fonts/Roboto_Light.ttf</string>
    <string name="font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="str_bedrooms">Bedrooms</string>
    <string name="str_bathrooms">Bathrooms</string>
    <string name="str_car_parks">Car Parks</string>
    <string name="str_land_size">Land Size</string>
    <string name="str_toilets">Toilets</string>
    <string name="str_bullet">\u2022 %1$s</string>
    <string name="str_supervisior_number">Supervisor Number</string>
    <string name="stage_progress_photo">Stage Progress Photo</string>
    <string name="supervisor_name">Supervisor Name:</string>
    <string name="supervisor_email">Supervisor Email:</string>
    <string name="supervisor_phone">Phone:</string>
    <string name="err_internet">Please check internet connection</string>
    <string name="our_offer">Our Offer</string>
    <string name="_new">NEW</string>
    <string name="no_network_access">No Internet Access</string>
    <string name="str_contract_updates">Contract Updates</string>
    <string name="str_permit_update_care">Permit Updates Care</string>
    <string name="str_back">Back</string>
    <string name="appointment">APPOINTMENT</string>
    <string name="str_appointment">Appointment</string>
    <string name="str_request_your_appointment">Request Your Appointment</string>
    <string name="str_have_to_login"><![CDATA[You have to <font color=\'#FFB900\'><u>login</u></font> to use this feature]]></string>
    <string name="str_cancel">Cancel</string>
    <string name="str_hint_search_suburbs">Search suburbs</string>
    <string name="symbol_currency">$</string>
    <string name="str_property_size">Property Size</string>
    <string name="symbol_size">&#160;m\u00B2</string>
    <string name="str_near_by_suburbs">Near by suburbs</string>
    <string name="str_keywords_sep_comma">Keywords (Seperated by comma)</string>
    <string name="low_to_high">Low To high</string>
    <string name="high_to_low">High To Low</string>
    <string name="_def">Default</string>
    <string name="value_near_by_suburbs">10</string>
</resources>
