<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_home_selected"
        android:title="@string/str_search"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/home_selector"
        android:title="@string/str_properties"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/home_selector"
        android:title="@string/str_shortlist"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_me"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/str_me"
        app:showAsAction="always|withText" />

</menu>
