<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp">

        <com.hamilton.view.TypefacedEditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/search_inputfill"
            android:drawableLeft="@drawable/icon_search_b"
            android:drawablePadding="5dp"
            android:hint="@string/str_hint_search_suburbs"
            android:imeOptions="actionSearch"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true" />

        <com.hamilton.view.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="40dp"
            android:minWidth="60dp"
            android:onClick="clearSearch"
            android:padding="7dp"
            android:text="@string/str_cancel"
            android:textColor="@color/white_60"
            android:textSize="15dp"
            app:typeface="@string/font_bold" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_tab_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2">

        <RadioButton
            style="@style/style_radio_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/tab_filter_first"
            android:button="@null"
            android:gravity="center"
            android:minHeight="0dp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:text="@string/str_buy"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RadioButton
            style="@style/style_radio_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/tab_filter_last"
            android:button="@null"
            android:gravity="center"
            android:minHeight="0dp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:text="@string/str_rent"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_filter_price_range"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true">

                <com.hamilton.view.TypefacedTextView
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_price_range"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <com.hamilton.view.TypefacedTextView
                    android:id="@+id/txt_filter_price_range"
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_any"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorHeader" />

            <RelativeLayout
                android:id="@+id/rl_filter_property_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true">

                <com.hamilton.view.TypefacedTextView
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_property_type"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <com.hamilton.view.TypefacedTextView
                    android:id="@+id/txt_filter_property_type"
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_any"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorHeader" />

            <RelativeLayout
                android:id="@+id/rl_filter_property_size"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="true">

                <com.hamilton.view.TypefacedTextView
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_property_size"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <com.hamilton.view.TypefacedTextView
                    android:id="@+id/txt_filter_property_size"
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:text="@string/str_any"
                    android:textColor="@color/black"
                    android:textSize="13dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorHeader" />

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorHeader" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:button="@null"
                android:clickable="true"
                android:drawableRight="@drawable/check_box"
                android:gravity="center_vertical"
                android:minHeight="30dp"
                android:text="@string/str_near_by_suburbs" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorHeader" />

        </LinearLayout>
    </ScrollView>

    <com.hamilton.view.TypefacedTextView
        android:id="@+id/lblSearch"
        style="@style/style_button_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/submit_button"
        android:text="@string/str_search"
        android:textColor="@color/black" />

</LinearLayout>