<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llAccountSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <com.hamilton.view.TypefacedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_account_cap"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblAccountEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="akshay@gmail.com"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/dark_grey" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblAccountLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/str_logout_cap"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAccountSettingsLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <com.hamilton.view.TypefacedTextView
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/str_login_for_detail"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/btnLoginUser"
            style="@style/style_button_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="20dip"
            android:clickable="true"
            android:minWidth="180dp"
            android:text="@string/str_tap_to_login" />

    </LinearLayout>

</RelativeLayout>