<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:fillViewport="true"
        android:paddingLeft="30dip"
        android:paddingRight="30dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_login" />

            <com.hamilton.view.TypefacedEditText
                android:id="@+id/txt_signup_name"
                style="@style/style_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/me"
                android:ems="10"
                android:hint="@string/str_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:paddingRight="@dimen/dimen_20">

                <requestFocus />
            </com.hamilton.view.TypefacedEditText>

            <com.hamilton.view.TypefacedEditText
                android:id="@+id/txt_signup_username"
                style="@style/style_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/email"
                android:ems="10"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingRight="@dimen/dimen_20" />

            <com.hamilton.view.TypefacedEditText
                android:id="@+id/txt_signup_phone"
                style="@style/style_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/phone"
                android:ems="10"
                android:hint="@string/str_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingRight="@dimen/dimen_20" />

            <com.hamilton.view.TypefacedEditText
                android:id="@+id/txt_signup_password"
                style="@style/style_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/password"
                android:hint="@string/str_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingRight="@dimen/dimen_20" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lblSignUpWithFb"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_social_login"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/facebook" />

                    <ImageView
                        android:id="@+id/lblSignUpWithTwitter"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_social_login"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/lblSignUpWithGmail"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_social_login"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="5dp"
                        android:src="@drawable/google_plus" />

                </LinearLayout>


                <com.hamilton.view.TypefacedTextView
                    android:id="@+id/btnLoginUser"
                    style="@style/style_button_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:clickable="true"
                    android:minWidth="180dp"
                    android:text="@string/str_sign_up" />

                <com.hamilton.view.TypefacedTextView
                    android:id="@+id/lblAlreadyHaveAccount"
                    style="@style/style_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dip"
                    android:clickable="true"
                    android:gravity="center"
                    android:minHeight="20dip"
                    android:text="@string/str_dont_have_account"
                    android:textColor="@color/white_60"
                    android:textSize="14dip"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>