<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/style_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/txt_header"
            style="@style/style_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/str_properties" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txt_header"
            android:layout_alignBottom="@+id/txt_header"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@drawable/ic_back"
            android:gravity="center"
            android:text="@string/str_back"
            android:textColor="@color/black"
            android:visibility="gone" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/txt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:textColor="@color/grey"
            tools:text="20 of 1400 properties" />

        <com.hamilton.view.TypefacedButton
            android:id="@+id/txt_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="10dp"

            android:text="Sort"
            android:textColor="@color/grey"
            android:visibility="visible" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_to_refresh_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_property"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/str_have_to_login"
            android:textColor="@color/black"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>