<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblTab1"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorNameTitle"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_name"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorName"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_name"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorEmailTitle"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/supervisor_email"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorEmail"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_name"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorPhoneTitle"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/supervisor_phone"
            android:textColor="@color/grey"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey" />

        <com.hamilton.view.TypefacedTextView
            android:id="@+id/lblSupervisorPhone"
            style="@style/style_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supervisor_name"
            android:textColor="@color/black"
            android:textSize="16dp" />

    </LinearLayout>

</ScrollView>